--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+    --primaryColor: #faf9fa;
+    --mainWhite : #fff;
+    --mainBlack : #222;
+    --inputColor : #d8dbde;
+    --buttonColor : #4771c6;
+    --effectColor : #7caddc;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: var(--primaryColor);
+    color: var(--mainBlack);
+}
+
+h1 { 
+    margin: 1rem 0;
 }
