Functional development completed

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     --primaryColor: #faf9fa;
     --mainWhite : #fff;
     --mainBlack : #222;
+    --mainRed: rgb(180, 41, 41);
     --inputColor :   #ecedef;
     --buttonColor : #4771c6;
     --effectColor : #7caddc;
